<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/slider"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_delay="0"
                app:iss_corner_radius="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppins_bold2"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_n_mit_group_of_institutes_ujjain"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppins_bold2"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_college"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/lightskyblue">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departments"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_bold2"/>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:theme="@style/Theme.MITUJJAINOFFICIAL">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/white">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_margin="8dp"
                                android:fontFamily="sans-serif-light"
                                android:text="Computer Science"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/inactive"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_margin="8dp"
                                android:fontFamily="sans-serif-light"
                                android:text=" Information Technology"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/inactive"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_margin="8dp"
                                android:fontFamily="sans-serif-light"
                                android:text="Electronics"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />





                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_details"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/poppins_bold2"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/poppins_bold2"
                    android:text="@string/mit_group_of_institutes"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/address_behind_air_strip_dewas_road_ujjain_m_p_456664_india_phone_0734_405_0680"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="15dp"
                    android:text="@string/phone_0734_4050680_0734_4050900"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="15dp"
                    android:text="@string/email_mahakalgroupujjain_gmail_com_info_mitujjain_com"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />


                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/mapgoogle"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="@drawable/map_background" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="10dp"
                    android:text="Contact Us On :- developermitujjain@gmail.com"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="10dp"
                    android:text="Copyright © 2022-2023 Developer_MIT_UJJAIN. All rights reserved."
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="11sp" />


            </LinearLayout>





        </LinearLayout>


    </ScrollView>


</FrameLayout>